Reuse library generated code across modules
A record's role - root, owner, dependent, child - is inferred from the
dependency graph, which makes it a property of the schemas a module
happens to load rather than of the record. The same schema therefore
resolves differently in a library and in its consumers, so a consumer
regenerates its own copy of a class the library already published, under
a name the library never used.

Pin the parts that cannot be inferred in the schema itself, so they
travel with the .avsc into every module that reads it:

  "ownership": "polymorphic"  owned through ownerEntity/ownerId rather
                              than a named foreign key, so records that
                              do not exist yet can own it. Reaches
                              dependent.peb with no owners at all, which
                              removes the need for placeholder owner
                              records invented to force that shape.
  "role": "child"             a composite always embedded in its parent:
                              never a root, never an owner, never a
                              dependent.

Then let a library publish what it generated. `manifest:` writes a table
of record to class keyed by generator path, since one record legitimately
has a different class in each world - inlined in a message, a row in an
entity. `imports:` resolves against it: the library published an artifact
so reference it, or it ran that generator and published nothing so fail
because the roles disagree, or it never ran that generator so generate
locally. Imports are all or nothing per library, otherwise records lose
owners or regain root-ness in the consumer.

Naming templates now receive `role`, so composites and entities produced
by one generator can be named differently.

Generating a schema all in one module and generating it with a record
moved into a library produce the same classes, which is covered by a test.

Two questions were being answe